# SOLEQ

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data/: AcceleratorChebyshevBenchmarkData_PoissonEquationMatrix20x20.csv  AcceleratorChebyshevBenchmarkData_SparseMatrix0.csv  AcceleratorChebyshevBenchmarkData_SparseMatrix1.csv  SolverChebyshevFixedPointIterationBenchmarkData_SparseMatrix0.csv  SolverConjugateGradientBenchmarkData_PoissonEquationMatrix20x20.csv  SolverFixedPointIterationBenchmarkData.csv  SolverFixedPointIterationBenchmarkData_2.csv  SolverFixedPointIterationBenchmarkData_SparseMatrix0_2.csv  SolverGaussSeidelBenchmarkData.csv  SolverGaussSeidelBenchmarkData_PoissonEquationMatrix20x20.csv  SolverGaussSeidelBenchmarkData_SparseMatrix0_2.csv  SolverGaussSeidelBenchmarkData_SparseMatrix1.csv  SolverJacobiBenchmarkData_SparseMatrix0.csv  SolverJacobiBenchmarkData_SparseMatrix0_2.csv  SolverJacobiBenchmarkData_SparseMatrix1.csv  SolverSteepestGradientDescentBenchmarkData_PoissonEquationMatrix20x20.csv  SolverSuccessiveOverRelaxationBenchmarkData_PoissonEquationMatrix20x20.csv  SolverSuccessiveOverRelaxationBenchmarkData_SparseMatrix0.csv  benchmark_data_for_optimized.csv  benchmark_data_for_unoptimized.csv
data/tools_source_data/: SparseMatrix1.mtx
include/SOLEQ/: csr_matrix.hpp  diagthree.hpp  linalg_operations.hpp  matrix.hpp  vector.hpp
src/: CMakeLists.txt  threediag.cpp  threediag.hpp
src/CSR_Matrix/: CMakeLists.txt  csr_matrix.cpp  csr_matrix.hpp
src/DiagThree/: CMakeLists.txt  diagthree.cpp  diagthree.hpp
src/Matrix/: CMakeLists.txt  matrix.cpp  matrix.hpp
src/SOLEQ/: DEFINES.hpp  csr_matrix.cpp  csr_matrix.hpp  diagthree.cpp  diagthree.hpp  linalg_operations.cpp  linalg_operations.hpp  matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
tests/: CMakeLists.txt  threediag_test_1.cpp  threediag_test_1_Initialisation.cpp  threediag_test_2_EarlyPrinting.cpp  threediag_test_3_DirectFilling.cpp  threediag_test_4_CreateWithFixedSize.cpp
tests/CSR_MatrixTests/: CMakeLists.txt  csr_matrix_test_1_TMP.cpp  csr_matrix_tests.cpp
tests/DiagThreeTests/: CMakeLists.txt  diagthree_test_1_Initialisation.cpp  diagthree_test_2_CreateDiagThree.cpp  diagthree_test_2_EarlyPrinting.cpp  diagthree_test_3_DirectFilling.cpp  diagthree_test_3_Printing.cpp  diagthree_test_4_CreateWithFixedSize.cpp  diagthree_test_4_SolveCheck.cpp  diagthree_test_5_ConstantTermsTesting.cpp  diagthree_test_5_DiagonalDomination.cpp  diagthree_test_6_SolveCheck.cpp  diagthree_test_6_YourOwnDiagThreeSolve.cpp  diagthree_tests.cpp
tests/LinalgOperationsTests/: CMakeLists.txt  linalg_operations_tests.cpp
tests/MatrixTests/: CMakeLists.txt  matrix_test_1_TMP.cpp  matrix_tests.cpp
tests/VectorTests/: CMakeLists.txt  vector_tests.cpp
tools/: AcceleratorChebyshevBenchmark.cpp  CMakeLists.txt  MatrixAndCSRMatrixToVectorMultiplicationBenchmark.cpp  SeekerForRelaxationFactor.cpp  SolverChebyshevFixedPointIterationBenchmark.cpp  SolverConjugateGradientBenchmark.cpp  SolverFixedPointIterationBenchmark.cpp  SolverGaussSeidelBenchmark.cpp  SolverJacobiBenchmark.cpp  SolverSteepestGradientDescentBenchmark.cpp  SolverSuccessiveOverRelaxationBenchmark.cpp  matrixbenchmark.cpp  solverJacobiBenchmark.cpp  solverSeidelBenchmark.cpp
tools/Parsers/: MatrixMarketFilesParser.cpp
